[package]
name = "bevy_terrain"
version = "0.2.0"
authors = ["clynamen <clynamen@gmail.com>"]
edition = "2024"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_winit",
    "bevy_window",
    "tonemapping_luts",
    "png",
    "x11",
] }

bevy_egui = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "render",
] }

image = "0.25.5"
nalgebra = "0.33.2"
palette = "0.5.0"
